--- a/styles/app.css
+++ b/styles/app.css
@@ -96,27 +96,73 @@ button {
 /* Shared */
 .header-container,
 .trendingPreview-header,
-.categoriesPreview-container {
+.categoriesPreview-container,
+.liked-header {
   padding: 0 24px;
 }
 
 .trendingPreview-container,
 .categoriesPreview-container,
+.liked-container,
 footer {
   margin-top: 48px;
 }
 
 .trendingPreview-header,
-.categoriesPreview-title {
+.categoriesPreview-title,
+.liked-header {
   margin-bottom: 24px;
 }
 
 .movie-container {
   cursor: pointer;
+  position: relative;
+}
+
+.movie-container--loading{
+  background-color: var(--purple-light-2);
+  border-radius: 8px;
+  height: 225px;
+  min-height: 225px;
+  max-height: 225px;
+  width: 150px;
+  min-width: 150px;
+  max-width: 150px;
+  margin-bottom: 15px;
+  animation: loading-skeleton infinite 1.5s;
+}
+
+.movie-container--loading:nth-child(2){
+  animation-delay: .2s;
+}
+.movie-container:nth-child(3){
+  animation-delay: .4s;
 }
 
 .movie-img {
   border-radius: 8px;
+  min-height: 175px;
+}
+
+.movie-btn {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  height: 30px;
+  width: 30px;
+  border-radius: 30px;
+  padding: 0;
+  margin: 0;
+}
+.movie-btn::before{
+  content: '🤍';
+}
+.movie-btn--liked{
+  background-color: var(--purple-light-2);
+  box-shadow: 0px 0px 10px 2px var(--purple-dark-1);
+}
+.movie-btn--liked::before{
+  content: '💜';
 }
 
 .categoriesPreview-list,
@@ -127,7 +173,21 @@ footer {
   position: relative;
   flex-wrap: wrap;
 }
-
+.category-container--loading{
+  background-color: var(--purple-light-2);
+  border-radius: 8px;
+  height: 25px;
+  min-height: 25px;
+  max-height: 25px;
+  width: 150px;
+  min-width: 150px;
+  max-width: 150px;
+  margin-bottom: 15px;
+  animation: loading-skeleton infinite 1.5s;
+}
+.category-container--loading:nth-child(2){
+  animation-delay: .2s;
+}
 
 /* Header */
 .header-container {
@@ -188,7 +248,8 @@ footer {
 
 
 /* Trending */
-.trendingPreview-header {
+.trendingPreview-header,
+.liked-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -197,10 +258,11 @@ footer {
 .trendingPreview-btn {
   border-radius: 8px;
   height: 32px;
-  width: 72px;
+  width: 82px;
 }
 
-.trendingPreview-movieList {
+.trendingPreview-movieList,
+.liked-movieList {
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
@@ -209,12 +271,14 @@ footer {
   padding-bottom: 16px;
 }
 
-.trendingPreview-movieList .movie-container {
+.trendingPreview-movieList .movie-container,
+.liked-container .movie-container{
   display: inline-block;
   margin-right: 8px;
 }
 
-.trendingPreview-movieList .movie-container .movie-img {
+.trendingPreview-movieList .movie-container .movie-img,
+.liked-container .movie-container .movie-img{
   height: 225px;
   min-height: 225px;
   max-height: 225px;
@@ -427,4 +491,21 @@ footer {
 /* Navigation */
 .inactive {
   display: none;
+}
+
+.lang-btn{
+  float: right;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  padding: 5px;
+}
+
+/* Animations */
+@keyframes loading-skeleton {
+  0%, 100%{
+    opacity: 100%;
+  }
+  50%{
+    opacity: 0%;
+  }
 }
